--- a/src/app/pages/leave/leave.component.html
+++ b/src/app/pages/leave/leave.component.html
@@ -4,7 +4,7 @@
       <a [routerLink]="['/pages/leave/leave-request']" class="submenu-link">Leave Request</a>
     </li>
     <li class="submenu-item">
-      <a [routerLink]="['/pages/leave/leave-type']" class="submenu-link">Leave Type</a>
+      <a [routerLink]="['/pages/leave/leavetype-list']" class="submenu-link">Leave Type</a>
     </li>
     <li class="submenu-item">
       <a [routerLink]="['/pages/leave/leave-balance']" class="submenu-link">Leave Balance</a>
