--- a/src/app/pages/leave/leave-type/leave-type.component.html
+++ b/src/app/pages/leave/leave-type/leave-type.component.html
@@ -12,6 +12,8 @@
         <input type="number" id="maxDays" formControlName="maxDays" required class="form-control">
     </div>
     <div class="form-group">
-        <button type="submit" [disabled]="leaveTypeForm.invalid" class="btn btn-primary">Submit</button>
+        <button type="submit" [disabled]="leaveTypeForm.invalid" class="btn btn-primary">Submit</button><br/>
+        <br/>
+        <button type="button" class="btn btn-secondary" [routerLink]="['/pages/leave']">Cancel</button>
     </div>
 </form>
