--- a/src/app/pages/staff/staff-profile/staff-profile.component.html
+++ b/src/app/pages/staff/staff-profile/staff-profile.component.html
@@ -57,6 +57,7 @@
                     Attendance Records
                 </mat-panel-title>
             </mat-expansion-panel-header>
+            <app-staff-attendance [staff]="staff"></app-staff-attendance>
             <!-- <div *ngFor="let record of staff.attendanceRecords">
                 <div class="profile-item">
                     <label>Date:</label>
