--- a/src/app/pages/staff/staff-list/staff-list.component.html
+++ b/src/app/pages/staff/staff-list/staff-list.component.html
@@ -1,5 +1,8 @@
 <div class="staff-list">
   <h2>Staff List</h2>
+  <div style="text-align: right;">
+    <button class="add-staff-button" [routerLink]="['/pages/staff/staff-form']">Add Staff</button>
+  </div>
   <table>
     <thead>
       <tr>
