--- a/src/app/pages/staff/staff-list/staff-list.component.css
+++ b/src/app/pages/staff/staff-list/staff-list.component.css
@@ -21,3 +21,21 @@ tr:hover {
 tr:nth-child(even) {
     background-color: #f9f9f9;
 }
+
+.add-staff-button {
+    background-color: #3f51b5;
+    color: white;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border: none;
+    border-radius: 4px;
+}
+
+.add-staff-button:hover {
+    background-color: #45a049;
+}
