--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -5,5 +5,7 @@
     <li><a [routerLink]="['/pages/leave']">Leave</a></li>
     <li><a [routerLink]="['/pages/attendance']">Attendance</a></li>
     <li><a [routerLink]="['/pages/payroll']">Payroll</a></li>
+    <li><a [routerLink]="['/pages/calendar']">Calendar</a></li>
   </ul>
 </div>
+
