--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -1,3 +1,6 @@
 @import 'components/sidebar';
 @import 'components/pages';
 @import 'components/attendance';
+@import 'components/calendar';
+@import 'components/submenu';
+@import 'components/list';
