--- a/src/app/pages/calendar-module/calendar-module.component.html
+++ b/src/app/pages/calendar-module/calendar-module.component.html
@@ -1,7 +1,7 @@
 <div class="submenu">
   <ul class="submenu-list">
     <li class="submenu-item">
-      <a [routerLink]="['/pages/leave/leave-request']" class="submenu-link">Holiday Calendar</a>
+      <a [routerLink]="['/pages/calendar/holiday']" class="submenu-link">Holiday Calendar</a>
     </li>
     <li class="submenu-item">
       <a [routerLink]="['/pages/leave/leavetype-list']" class="submenu-link">Attendance Calendar</a>
