--- a/src/assets/scss/components/_list.scss
+++ b/src/assets/scss/components/_list.scss
@@ -22,7 +22,7 @@ tr:nth-child(even) {
     background-color: #f9f9f9;
 }
 
-.add-staff-button {
+.add-button {
     background-color: #3f51b5;
     color: white;
     padding: 10px 20px;
